Updated package file and removed unused endpoints

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "netlify-express",
+  "name": "cbt-file-transfer",
   "version": "0.0.1",
-  "description": "Example of how to deploy a Express.js Netlify app.",
+  "description": "App to use for testing file transfer",
   "main": "functions/server.js",
   "scripts": {
     "build": "netlify-lambda build express",
@@ -9,18 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/neverendingqs/netlify-express.git"
+    "url": "git+https://github.com/logicalcoder/cbt-file-transfer.git"
   },
   "keywords": [
     "netlify",
     "express.js"
   ],
-  "author": "neverendingqs",
+  "author": "logicalcoder",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/neverendingqs/netlify-express/issues"
-  },
-  "homepage": "https://github.com/neverendingqs/netlify-express#readme",
   "dependencies": {},
   "devDependencies": {
     "body-parser": "^1.19.0",
